[tool.poetry]
name = "generative_inpainting"
version = "0.1.0"
description = ""
authors = ["Petter Strandmark <petter.strandmark@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
tensorflow = "~1.7.0"
neuralgym = {git = "https://github.com/JiahuiYu/neuralgym"}
opencv-python = "^4.2.0"
PyYAML = "^5.3.1"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
